--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-    "name": "crud-node-docker-express",
-    "version": "1.0.0",
-    "main": "index.js",
-    "scripts": {
-        "start": "node index.js"
-    },
-    "dependencies": {
-        "express": "^4.18.2",
-        "cors": "^2.8.5",
-        "body-parser": "^1.20.2"
-    }
+  "name": "crud-node-docker-express",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "build-css": "tailwindcss build src/styles.css -o public/styles.css",
+    "watch-css": "tailwindcss build src/styles.css -o public/styles.css --watch"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.0"
+  }
 }
